--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
   color: #ffffff;
 }
 
+.content {
+  padding: 0 19px 0;
+}
+
 .popup {
   position: fixed;
   width: 100%;
@@ -23,6 +27,7 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  z-index: 1;
 }
 
 .popup_opened {
@@ -31,8 +36,8 @@
 
 .popup__wrapper {
   position: relative;
-  min-width: 430px;
-  min-height: 330px;
+  width: 430px;
+  height: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +47,7 @@
 }
 
 .popup__container {
-  min-width: 358px;
+  width: 358px;
 }
 
 .popup__input-container {
@@ -54,9 +59,9 @@
   flex-direction: column;
 }
 
-.popup__header {
+.popup__title {
   padding: 0;
-  margin-bottom: 54px;
+  margin-bottom: 45px;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
@@ -107,7 +112,15 @@
   opacity: 0.8;
 }
 
-.popup__close-icon {
+.popup__close-button {
+  padding: 0;
+  border: 0;
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  background-image: url("images/CloseButton.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
   position: absolute;
   top: -40px;
   right: -40px;
@@ -115,7 +128,7 @@
   transition: opacity 0.2s ease-out;
 }
 
-.popup__close-icon:hover {
+.popup__close-button:hover {
   opacity: 0.6;
 }
 
@@ -137,15 +150,16 @@
 
 .profile {
   max-width: 880px;
-  margin: 36px auto 47px;
+  margin: 40px auto 50px;
   display: grid;
-  grid-template-columns: 169px 1fr 150px;
+  grid-template-columns: 120px 1fr fit-content(150px);
+  column-gap: 30px;
   align-items: center;
 }
 
 .profile__picture {
-  width: 125px;
-  height: 125px;
+  width: 120px;
+  height: 120px;
   background-image: url("images/Custo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -172,6 +186,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 330px;
 }
 
 .profile__edit-button {
@@ -187,7 +205,6 @@
   position: relative;
   top: 3px;
   cursor: pointer;
-  z-index: -1;
 }
 
 .profile__edit-button:hover {
@@ -199,12 +216,16 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 330px;
 }
 
 .profile__add-button {
   padding: 0;
-  max-width: 150px;
-  min-height: 50px;
+  width: 150px;
+  height: 50px;
   background-color: transparent;
   background-image: url("images/Plus.svg");
   background-size: 22px 22px;
@@ -250,7 +271,7 @@
 }
 
 .cards__caption {
-  padding: 0 15px 0 21px;
+  margin: 0 15px 0 21px;
   display: flex;
   justify-content: space-between;
   max-width: 246px;
@@ -264,12 +285,15 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .cards__like-button {
   padding: 0;
-  width: 22px;
-  height: 19px;
+  min-width: 22px;
+  min-height: 19px;
   background-image: url("images/LikeButton.svg");
   background-color: transparent;
   background-repeat: no-repeat;
@@ -277,18 +301,136 @@
   cursor: pointer;
 }
 
+.cards__like-button_active {
+  background-image: url("images/LikeButtonActive.svg");
+}
+
 .cards__like-button:hover {
   opacity: 0.6;
 }
 
 .footer {
-  margin: 67px auto 60px;
+  margin: 66px auto 60px;
   max-width: 880px;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .footer__copyright {
+  margin: 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+}
+
+@media screen and (max-width: 924px) {
+  .header__logo {
+    margin-left: 27px;
+  }
+
+  .footer {
+    padding: 0 19px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__logo {
+    width: 104px;
+    height: 24px;
+  }
+
+  .popup__wrapper {
+    width: 282px;
+    height: 322px;
+  }
+
+  .popup__container {
+    width: 238px;
+  }
+
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 65px;
+  }
+
+  .popup__input_content_description {
+    margin-bottom: 45px;
+  }
+
+  .popup__save-button {
+    min-height: 46px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .popup__close-button {
+    width: 20px;
+    height: 20px;
+    top: -36px;
+    right: 0;
+  }
+
+  .profile {
+    margin: 42px auto 36px;
+    min-height: 286px;
+    align-content: space-between;
+    grid-auto-flow: row;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+  }
+
+  .profile__info {
+    align-items: center;
+  }
+
+  .profile__name-wrapper {
+    column-gap: 10px;
+  }
+
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+    max-width: 220px;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    top: 2px;
+  }
+
+  .profile__description {
+    font-size: 14px;
+    line-height: 17px;
+    max-width: 220px;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    max-width: 282px;
+    background-size: 16px 16px;
+  }
+
+  .cards__list {
+    grid-auto-flow: row;
+    grid-template-columns: fit-content(282px);
+    grid-template-rows: repeat(6, fit-content(361px));
+    justify-content: center;
+  }
+
+  .cards__title {
+    max-width: max-content;
+  }
+
+  .footer {
+    margin: 48px auto 36px;
+  }
+
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
