--- a/blocks/cards/__like-button/cards__like-button.css
+++ b/blocks/cards/__like-button/cards__like-button.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   border: 0;
   cursor: pointer;
+  transition: opacity 0.3s ease-out;
 }
 
 .cards__like-button:hover {
