--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,10 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   display: flex;
 }
+
+@media screen and (max-width: 767px) {
+  .header {
+    margin: 28px auto 0;
+    min-height: 56px;
+  }
+}
