--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,6 @@
 .popup__input {
   padding: 0 0 13px 0;
+  margin-bottom: 30px;
   font-family: inherit;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -12,3 +13,14 @@
 .popup__input:focus {
   outline: none;
 }
+
+.popup__input:nth-last-of-type(1) {
+  margin-bottom: 48px;
+}
+
+@media screen and (max-width: 767px) {
+  .popup__input:nth-last-of-type(1) {
+    margin-bottom: 45px;
+  }
+}
+
