--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -1,7 +1,7 @@
 .popup__wrapper {
   position: relative;
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,6 +13,6 @@
 @media screen and (max-width: 767px) {
   .popup__wrapper {
     width: 282px;
-    height: 322px;
+    min-height: 322px;
   }
 }
