--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,10 +7,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   border: 1px solid #ffffff;
-  align-self: center;
-  position: relative;
-  top: 3px;
+  margin-top: 15px;
   cursor: pointer;
+  transition: opacity 0.3s ease-out;
 }
 
 .profile__edit-button:hover {
@@ -19,8 +18,11 @@
 
 @media screen and (max-width: 767px) {
   .profile__edit-button {
+    margin: 0;
     width: 18px;
     height: 18px;
-    top: 2px;
+    position: absolute;
+    top: 8px;
+    right: -27px;
   }
 }
