--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,15 +1,16 @@
 .profile__info {
   margin: 0;
   padding: 0;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  row-gap: 16px;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: max-content auto;
+  column-gap: 18px;
+  justify-items: start;
 }
 
 @media screen and (max-width: 767px) {
   .profile__info {
-    align-items: center;
+    grid-auto-flow: row;
+    grid-template-columns: auto;
+    position: relative;
   }
 }
