--- a/blocks/profile/__add-place-button/profile__add-place-button.css
+++ b/blocks/profile/__add-place-button/profile__add-place-button.css
@@ -1,4 +1,4 @@
-.profile__add-button {
+.profile__add-place-button {
   padding: 0;
   width: 150px;
   height: 50px;
@@ -13,12 +13,12 @@
   transition: opacity 0.3s ease-out;
 }
 
-.profile__add-button:hover {
+.profile__add-place-button:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 767px) {
-  .profile__add-button {
+  .profile__add-place-button {
     width: 100%;
     max-width: 282px;
     background-size: 16px 16px;
