--- a/blocks/profile/__edit-user-button/profile__edit-user-button.css
+++ b/blocks/profile/__edit-user-button/profile__edit-user-button.css
@@ -1,4 +1,4 @@
-.profile__edit-button {
+.profile__edit-user-button {
   padding: 0;
   width: 24px;
   height: 24px;
@@ -12,12 +12,12 @@
   transition: opacity 0.3s ease-out;
 }
 
-.profile__edit-button:hover {
+.profile__edit-user-button:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 767px) {
-  .profile__edit-button {
+  .profile__edit-user-button {
     margin: 0;
     width: 18px;
     height: 18px;
