--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,7 @@
 .popup {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -10,4 +12,5 @@
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
   z-index: 1;
+  transition: opacity 0.4s ease-out;
 }
