--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url("../blocks/cards/__like-button/_active/cards__like-button_active.css");
 @import url("../blocks/cards/__list/cards__list.css");
 @import url("../blocks/cards/__title/cards__title.css");
+@import url("../blocks/cards/__trash-button/cards__trash-button.css");
 
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
