--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,5 +12,5 @@
   background-color: rgba(0, 0, 0, 0.5);
   overflow: hidden;
   z-index: 1;
-  transition: opacity 0.4s ease-out;
+  transition: visibility 0.4s, opacity 0.4s ease-out;
 }
