--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,8 @@
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__wrapper/popup__wrapper.css");
+
+@import url("../blocks/popup/__picture-container/popup__picture-container.css");
+@import url("../blocks/popup/__picture-wrapper/popup__picture-wrapper.css");
+@import url("../blocks/popup/__picture/popup__picture.css");
+@import url("../blocks/popup/__picture-caption/popup__picture-caption.css");
