--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -3,10 +3,10 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3, 282px);
-  grid-template-rows: repeat(2, 361px);
-  grid-auto-columns: 282px;
-  grid-auto-rows: 361px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, fit-content(361px));
+  grid-auto-columns: 1fr;
+  grid-auto-rows: fit-content(361px);
   column-gap: 17px;
   row-gap: 20px;
 }
@@ -14,8 +14,8 @@
 @media screen and (max-width: 767px) {
   .cards__list {
     grid-auto-flow: row;
-    grid-template-columns: 282px;
-    grid-template-rows: repeat(6, 361px);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, fit-content(361px));
     justify-content: center;
   }
 }
