style: оформление кода

--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,10 @@
 @import url("../blocks/popup/__close-button/popup__close-button.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__input/_content/popup__input_content_place-link.css");
+@import url("../blocks/popup/__input/_content/popup__input_content_place-title.css");
+@import url("../blocks/popup/__input/_content/popup__input_content_user-job.css");
+@import url("../blocks/popup/__input/_content/popup__input_content_user-name.css");
 @import url("../blocks/popup/__input-container/popup__input-container.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
 @import url("../blocks/popup/__title/popup__title.css");
