style: ошибки полей ввода, неактивная кнопка сабмита формы

--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -8,6 +8,7 @@
   justify-content: center;
   background-color: #ffffff;
   border-radius: 10px;
+  cursor: default;
 }
 
 @media screen and (max-width: 767px) {
