--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -10,6 +10,11 @@
   color: #000000;
 }
 
+.popup__input::placeholder {
+  color: #000000;
+  opacity: 0.2;
+}
+
 .popup__input:focus {
   outline: none;
 }
