--- a/pages/index.css
+++ b/pages/index.css
@@ -41,8 +41,12 @@
 @import url("../blocks/popup/__input/_content/popup__input_content_place-title.css");
 @import url("../blocks/popup/__input/_content/popup__input_content_user-job.css");
 @import url("../blocks/popup/__input/_content/popup__input_content_user-name.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_error.css");
+@import url("../blocks/popup/__input-error/popup__input-error.css");
+@import url("../blocks/popup/__input-error/_active/popup__input-error_active.css");
 @import url("../blocks/popup/__input-container/popup__input-container.css");
 @import url("../blocks/popup/__save-button/popup__save-button.css");
+@import url("../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__wrapper/popup__wrapper.css");
 
