--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -23,6 +23,11 @@
   margin-bottom: 48px;
 }
 
+.popup__input::placeholder {
+  color: #000000;
+  opacity: 0.2;
+}
+
 @media screen and (max-width: 767px) {
   .popup__input:nth-last-of-type(1) {
     margin-bottom: 45px;
