--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,5 @@
 .popup__title {
-  padding: 0;
-  margin-bottom: 45px;
+  padding: 0 0 45px 0;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
@@ -10,6 +9,6 @@
 @media screen and (max-width: 767px) {
   .popup__title {
     font-size: 18px;
-    margin-bottom: 75px;
+    padding: 0 0 75px 0;
   }
 }
