fix: файловая структура

--- a/src/blocks/cards/__trash-button/cards__trash-button 2.css
+++ b/src/blocks/cards/__trash-button/cards__trash-button 2.css
@@ -1,6 +1,6 @@
 .cards__trash-button {
   position: absolute;
-  background-image: url("../../../../images/Group.svg");
+  background-image: url("../../../images/Group.svg");
   width: 18px;
   height: 19px;
   top: 20px;
