--- a/src/blocks/cards/__like-button/cards__like-button 2.css
+++ b/src/blocks/cards/__like-button/cards__like-button 2.css
@@ -2,7 +2,7 @@
   padding: 0;
   min-width: 22px;
   min-height: 19px;
-  background-image: url("../../../../images/LikeButton.svg");
+  background-image: url("../../../images/LikeButton.svg");
   background-color: transparent;
   background-repeat: no-repeat;
   border: 0;
