--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url("../../../../images/logo.svg");
+  background-image: url("../../../images/logo.svg");
   background-repeat: no-repeat;
   background-size: contain;
   width: 142px;
