--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -4,7 +4,7 @@
   width: 32px;
   height: 32px;
   background-color: transparent;
-  background-image: url("../../../../images/CloseButton.svg");
+  background-image: url("../../../images/CloseButton.svg");
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
