--- a/src/blocks/profile/__add-place-button/profile__add-place-button.css
+++ b/src/blocks/profile/__add-place-button/profile__add-place-button.css
@@ -3,7 +3,7 @@
   width: 150px;
   height: 50px;
   background-color: transparent;
-  background-image: url("../../../../images/Plus.svg");
+  background-image: url("../../../images/Plus.svg");
   background-size: 22px 22px;
   background-repeat: no-repeat;
   background-position: center;
