--- a/src/blocks/profile/__edit-user-button/profile__edit-user-button.css
+++ b/src/blocks/profile/__edit-user-button/profile__edit-user-button.css
@@ -3,7 +3,7 @@
   width: 24px;
   height: 24px;
   background-color: transparent;
-  background-image: url("../../../../images/EditButton.svg");
+  background-image: url("../../../images/EditButton.svg");
   background-size: cover;
   background-repeat: no-repeat;
   border: 1px solid #ffffff;
