--- a/src/blocks/profile/__picture/profile__picture.css
+++ b/src/blocks/profile/__picture/profile__picture.css
@@ -1,7 +1,7 @@
 .profile__picture {
   width: 120px;
   height: 120px;
-  background-image: url("../../../../images/Custo.jpg");
+  background-image: url("../../../images/Custo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50%;
