--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,6 +21,8 @@
 @import url("../blocks/cards/__caption/cards__caption.css");
 @import url("../blocks/cards/__image/cards__image.css");
 @import url("../blocks/cards/__item/cards__item.css");
+@import url("../blocks/cards/__like-wrapper/cards__like-wrapper.css");
+@import url("../blocks/cards/__like-counter/cards__like-counter.css");
 @import url("../blocks/cards/__like-button/cards__like-button.css");
 @import url("../blocks/cards/__like-button/_active/cards__like-button_active.css");
 @import url("../blocks/cards/__list/cards__list.css");
