--- a/src/blocks/profile/__picture/profile__picture.css
+++ b/src/blocks/profile/__picture/profile__picture.css
@@ -1,6 +1,7 @@
 .profile__picture {
-  width: 120px;
-  height: 120px;
   object-fit: cover;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+  z-index: -1;
 }
