refactor: небольшие фиксы

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,7 @@
 @import url("../blocks/cards/__list/cards__list.css");
 @import url("../blocks/cards/__title/cards__title.css");
 @import url("../blocks/cards/__trash-button/cards__trash-button.css");
+@import url("../blocks/cards/__trash-button/_hidden/cards__trash-button_hidden.css");
 
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
