--- a/src/blocks/cards/__trash-button/cards__trash-button.css
+++ b/src/blocks/cards/__trash-button/cards__trash-button.css
@@ -1,6 +1,10 @@
 .cards__trash-button {
   position: absolute;
   background-image: url("../../../images/Group.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+  border: 0;
   width: 18px;
   height: 19px;
   top: 20px;
