--- a/main.css
+++ b/main.css
@@ -23,7 +23,8 @@
 .cards__like-button_active{background-image:url(fe17a515669479b1e649.svg)}
 .cards__list{-moz-column-gap:17px;column-gap:17px;display:grid;grid-auto-columns:1fr;grid-auto-rows:fit-content(361px);grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,fit-content(361px));list-style:none;margin:0;padding:0;row-gap:20px}@media screen and (max-width:767px){.cards__list{grid-auto-flow:row;grid-template-columns:1fr;grid-template-rows:repeat(6,fit-content(361px));justify-content:center}}
 .cards__title{color:#000;font-size:24px;font-weight:900;line-height:1.2;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:767px){.cards__title{max-width:-moz-max-content;max-width:max-content}}
-.cards__trash-button{background-image:url(823b0cf1b0b7e9cb7cad.svg);cursor:pointer;height:19px;position:absolute;right:20px;top:20px;transition:opacity .3s ease-out;width:18px}.cards__trash-button:hover{opacity:.6}
+.cards__trash-button{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;transition:opacity .3s ease-out;width:18px}.cards__trash-button:hover{opacity:.6}
+.cards__trash-button_hidden{visibility:hidden}
 .footer{display:flex;justify-content:flex-start;margin:66px auto 60px;max-width:880px}@media screen and (max-width:924px){.footer{padding:0 19px}}@media screen and (max-width:767px){.footer{margin:48px auto 36px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:1.2;margin:0}@media screen and (max-width:767px){.footer__copyright{font-size:14px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);cursor:pointer;display:flex;height:100%;justify-content:center;left:0;opacity:0;overflow:hidden;position:fixed;top:0;transition:visibility .3s,opacity .3s ease-out;visibility:hidden;width:100%;z-index:1}
